<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/headview"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="#303134" >

        <ImageView
            android:id="@+id/action_show_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:gravity="center"
            android:src="@drawable/align_just" />

        <TextView
            android:id="@+id/imageLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/action_show_menu"
            android:gravity="center"
            android:text="@string/txt_selector"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/action_cache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/action_manager"
            android:background="@drawable/button_bg_black_green"
            android:gravity="center"
            android:text="@string/action_cache"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <TextView
            android:id="@+id/action_manager"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bg_black_green"
            android:gravity="center"
            android:text="@string/action_manager"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_alignParentBottom="true"
        android:background="#303134" >

        <TextView
            android:id="@+id/del_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_bg_green_black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/action_del_desc"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_bg_green_black"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/action_save_desc"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <GridView
        android:id="@+id/myGrid"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_above="@id/bottom_layout"
        android:layout_below="@id/headview"
        android:layout_centerHorizontal="true"
        android:background="#ffffff"
        android:horizontalSpacing="5dp"
        android:listSelector="@null"
        android:numColumns="4"
        android:verticalSpacing="5dp" />

</RelativeLayout>